# architile

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
architile/: __init__.py  _core.py  orthogonal.py  tiling.py
examples/: dev.ipynb
